--- a/CodeColinasFormularioProjeto/appcodecolinas/templates/cadastrocliente.html
+++ b/CodeColinasFormularioProjeto/appcodecolinas/templates/cadastrocliente.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro de Cliente - Indústria Química Uberaba</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'appcodecolinas/estilocadastro.css' %}">
   </head>
   <body>
     <h1>Cadastro de Cliente</h1>
