--- a/CodeColinasFormularioProjeto/appcodecolinas/templates/confirmacaocadastro.html
+++ b/CodeColinasFormularioProjeto/appcodecolinas/templates/confirmacaocadastro.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Confirmação de Cadastro</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'appcodecolinas/estiloconfirmacao.css' %}">
   </head>
   <body>
     <h1>Cadastro Realizado com Sucesso!</h1>
