--- a/Cardapio/static/css/index.css
+++ b/Cardapio/static/css/index.css
@@ -49,7 +49,6 @@ header h1 {
 
 /* Estilo para as tags de imagem nos itens do cardápio com animação */
 .item-cardapio {
-  border-radius: 20px; /* Bordas arredondadas */
   overflow: hidden; /* Garante que as bordas arredondadas sejam aplicadas corretamente */
   margin-bottom: 10px;
 }
@@ -68,6 +67,13 @@ header h1 {
 }
 
 .item-cardapio p.preco {
+  display: inline; /* Faz com que o preço fique ao lado do checkbox */
+  margin-left: 10px; /* Espaço entre a imagem e o preço */
+  font-size: 18px; /* Aumenta o tamanho da fonte */
+  color: #2ecc71; /* Verde */
+}
+
+.contador {
   display: inline; /* Faz com que o preço fique ao lado do checkbox */
   margin-left: 10px; /* Espaço entre a imagem e o preço */
   font-size: 18px; /* Aumenta o tamanho da fonte */
